# clichat-rust

./: Cargo.toml  README.md
chatclient/: Cargo.toml
chatclient/src/: main.rs
chatclient/src/connection/: mod.rs
chatclient/src/state_handler/: action.rs  mod.rs  state.rs
chatclient/src/tui/: app_router.rs  mod.rs
chatclient/src/tui/components/: component.rs  input_box.rs  main_page.rs  mod.rs  primary.rs
chatserver/: Cargo.toml
chatserver/src/: main.rs
chatserver/src/room/: mod.rs  room_manager.rs
chatserver/src/server/: client_connection.rs  mod.rs  server_events.rs  session.rs
client/: Cargo.toml
client/src/: client.rs  lib.rs  main.rs
client/src/state_handler/: action.rs  mod.rs  state.rs  state_handler.rs
client/src/tui/: app_router.rs  mod.rs  tui.rs
client/src/tui/components/: component.rs  input_box.rs  main_page.rs  mod.rs  primary.rs
common/: Cargo.toml
common/src/: lib.rs  message.rs  message_queue.rs
common/tests/: parsing_tests.rs  serialization_tests.rs
config/: chat_client.conf
server/: Cargo.toml
server/src/: chat_session.rs  lib.rs  main.rs  server_action.rs  server_updates.rs
server/src/room/: mod.rs  room.rs  room_manager.rs
