[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = {version = "0.28.1", features = ["event-stream"]}
futures = "0.3.31"
ratatui = "0.29.0"
tokio = {version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
common = {path = "../common"}
anyhow = "1.0.94"
